--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -975,7 +975,7 @@
         cursor: pointer;
         font-size: 1.18rem;
         white-space: nowrap;
-        background: linear-gradient(to left, rgba(40,23,64,88), #141414);
+        background: linear-gradient(to left, rgba(94, 0, 225, 0.8), #141414);
         border: #8426FF 1px solid;
         padding: 13px 20px;
         border-radius: 30px;
