--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1365,28 +1365,28 @@
 
     document.addEventListener('DOMContentLoaded', function() {
         if (getCookie("day")) {
-            day();
-            day();
+            document.getElementById("day").click();
+            document.getElementById("day").click();
         }
         else if (getCookie("hour")) {
-            hour();
-            hour();
+            document.getElementById("hour").click();
+            document.getElementById("hour").click();
         }
         else if (getCookie("minute")) {
-            minute();
-            minute();
+            document.getElementById("minute").click();
+            document.getElementById("minute").click();
         }
         else if (getCookie("second")) {
-            second();
-            second();
+            document.getElementById("second").click();
+            document.getElementById("second").click();
         }
         else if (getCookie("millisecond")) {
-            millisecond();
-            millisecond();
+            document.getElementById("millisecond").click();
+            document.getElementById("millisecond").click();
         }
         else if (getCookie("week")) {
-            week();
-            week();
+            document.getElementById("week").click();
+            document.getElementById("week").click();
         }
     }, false);
 
