--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -594,6 +594,7 @@
     }
 
     .clock {
+        font-size: 90vw;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -605,6 +606,7 @@
     }
 
     .clockslow {
+        font-size: 90vw;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -616,6 +618,7 @@
     }
 
     .clockfast {
+        font-size: 90vw;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1362,33 +1365,6 @@
         }
     }
 
-
-    document.addEventListener('DOMContentLoaded', function() {
-        if (getCookie("day")) {
-            document.getElementById("day").click();
-            document.getElementById("day").click();
-        }
-        else if (getCookie("hour")) {
-            document.getElementById("hour").click();
-            document.getElementById("hour").click();
-        }
-        else if (getCookie("minute")) {
-            document.getElementById("minute").click();
-            document.getElementById("minute").click();
-        }
-        else if (getCookie("second")) {
-            document.getElementById("second").click();
-            document.getElementById("second").click();
-        }
-        else if (getCookie("millisecond")) {
-            document.getElementById("millisecond").click();
-            document.getElementById("millisecond").click();
-        }
-        else if (getCookie("week")) {
-            document.getElementById("week").click();
-            document.getElementById("week").click();
-        }
-    }, false);
 
     if (parameter('date')) {
         document.querySelector(".datepicker").value = parameter('date') + 'T00:00';
