--- a/projects.html
+++ b/projects.html
@@ -140,6 +140,15 @@
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/marginexperiment/margin.html">Check It Out</a>
         </section>
+        <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">Ezdubs Edit</h1>
+            <h2 data-aos="fade-up">Video</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/shorts.png" />
+            <p data-aos="fade-up">
+                A high energy YouTube Shorts edit for creator Ezdubs.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://youtube.com/shorts/wi5dz3WPMKo?si=fqMCNk3LdCBghzmW">Play Now</a>
+        </section>
         <section class="projectarea" data-projecttype="shortcut">
             <h1 data-aos="fade-up">Pull Duolingo Streak</h1>
             <h2 data-aos="fade-up">Siri Shortcut</h2>
