--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/marginexperiment/margin.html">Check It Out</a>
         </section>
-        <section class="projectarea" data-projecttype="website">
+        <section class="projectarea" data-projecttype="video">
             <h1 data-aos="fade-up">Ezdubs Edit</h1>
             <h2 data-aos="fade-up">Video</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/shorts.png" />
