--- a/projects.html
+++ b/projects.html
@@ -147,7 +147,7 @@
             <p data-aos="fade-up">
                 A high energy YouTube Shorts edit for creator Ezdubs.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://youtube.com/shorts/wi5dz3WPMKo?si=fqMCNk3LdCBghzmW">Play Now</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://youtube.com/shorts/wi5dz3WPMKo?si=fqMCNk3LdCBghzmW">Open YouTube</a>
         </section>
         <section class="projectarea" data-projecttype="shortcut">
             <h1 data-aos="fade-up">Pull Duolingo Streak</h1>
@@ -193,6 +193,15 @@
                 Another scratch game from before I used Unity for games, while I was learning web development.
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://scratch.mit.edu/projects/419386012">Start The Game</a>
+        </section>
+                <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">Perspective Playground</h1>
+            <h2 data-aos="fade-up">Website</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/perspectiveplayground.png" />
+            <p data-aos="fade-up">
+                [Desktop Experience] Manipulate images by moving your mouse around and watching them get warped.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://michaeldors.com/perspective/playground">Open</a>
         </section>
     </div>
 
