--- a/projects.html
+++ b/projects.html
@@ -176,6 +176,15 @@
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldors_/">Request Follow</a>
         </section>
+        <section class="projectarea" data-projecttype="shortcut">
+            <h1 data-aos="fade-up">Gradual</h1>
+            <h2 data-aos="fade-up">Siri Shortcut</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/gradual.png" />
+            <p data-aos="fade-up">
+                Wake up at an earlier time, over time. Select an end wakeup goal and how many days it should take to get there.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/71e05c3f19cc48d192785983a170047d">Wake Up Early</a>
+        </section>
         <section class="projectarea" data-projecttype="scratch">
             <h1 data-aos="fade-up">Pop The Balloon</h1>
             <h2 data-aos="fade-up">Scratch</h2>
