--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Countdown - Michael Dors"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://michaeldors.com/mcacountdown/timer"/>
-    <meta property="og:description" content="A beautiful countdown timer website."/>
+    <meta property="og:description" content="A beautiful and smart countdown timer website."/>
     <meta property="og:site_name" content="Michael Dors" />
     <link rel="apple-touch-icon" href="Images/countdownhomescreen.png">
 </head>
