--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -215,7 +215,7 @@
     <div id="autopilotpopup" style="margin:0; padding:0; position:absolute; top:80%; left:0px; width:100%; height:20%; border-top:solid 3px white; opacity:1; transition:0.5s opacity;">
         <h1 style="position: absolute; top: 15%; left: 48.5%; text-shadow: 6px 6px 0 #141414, -6px 6px 0 #141414, -6px -6px 0 #141414, 6px -6px 0 #141414; ">or</h1>
         <div id="manualpilot" style="background-image:url(calendarbg.png); background-size:cover; width: 50%; float: left; height: 100%; ">
-            <h1 id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
+            <h1 style="margin-left:30px;" id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
         </div>
         <div id="autopilot" style="float: right; width: 50%; background: linear-gradient(to right, #141414, #01FE5E); height: 100%; outline: 3px white solid; ">
             <div id="autopilotinfo" style="margin-left: 60px;">
@@ -589,10 +589,6 @@
     #gear {
         top: 95%;
         left: 5%;
-    }
-
-    #gearpointer{
-        left:5%;
     }
 
     #ad {
@@ -1160,9 +1156,6 @@
             top: 5%;
             left: 7%;
         }
-    #gearpointer{
-        left:7%;
-    }
         
 
 
@@ -1185,9 +1178,6 @@
             top: 95%;
             left: 3%;
         }
-            #gearpointer{
-        left:3%;
-    }
 
         #ad {
             height: 10vh;
