--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1502,6 +1502,7 @@
 
         makeQR();
         document.getElementById("autopilotpopup").remove();
+        document.getElementById("autopilotpopupmobile").remove();
     }
     else {
         var now = new Date();
