--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -239,7 +239,7 @@
     </div>
 
     <div id="autopilotpopupmobile" style="margin:0; padding:0; position:absolute; top:60%; left:0px; width:100%; height:40%; opacity:1; transition:0.5s opacity;">
-        <div id="autopilotmobile" style="width: 100%; background: linear-gradient(to bottom, transparent, #01FE5E); height: 45%;">
+        <div id="autopilotmobile" style="width: 100%; background: linear-gradient(to bottom, rgba(255,0,0,0), #01FE5E); height: 45%;">
             <div id="autopilotinfomobile" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
                     <span style="color: #11371f;">
