--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -253,7 +253,7 @@
         <div id="manualpilotmobile" style="background-image:url(calendarbg.png); margin-top:0px; background-size:cover; width: 100%; height: 100%; border-top:3px solid white;">
             <h2 id="gearpointer" style="text-align: center; width:100%; padding-top:20px;"><span style="padding-top:100px;">pick a date under</span></h1>
             <div style="text-align: center;">
-                <a id="memsav" class="whitebutton" style="display: inline-block;" onclick="settings();"><i class="fa-solid fa-gear"></i> Options</a>
+                <a class="whitebutton" style="display: inline-block;" onclick="settings();"><i class="fa-solid fa-gear"></i> Options</a>
             </div>
         </div>
 
