--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -873,6 +873,24 @@
                 box-shadow: none;
             }
 
+.whitebutton::before {
+                content: "";
+              mix-blend-mode:multiply;
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;  /* Match button height */
+                width: 0;       /* Start at 0 width */
+                background-color: #cccccc; /* Grey color for progress bar */
+                animation: progress-fill 10s ease-in forwards;
+                z-index: 1;      /* Place behind text but above button background */
+            }
+
+            @keyframes progress-fill {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
     .warning {
         font-family: 'Fredoka One';
         background-color: #ff5353;
