--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -862,18 +862,20 @@
         cursor: pointer;
         font-size: 20px;
         font-weight: 100;
+        height:25px;
+               position: relative;
+
+   overflow:hidden;
     }
-    .whitebutton:hover {
-            position: relative;
+.whitebutton:hover {
             box-shadow: 0 5px 0 #777777;
         }
 
             .whitebutton:hover:active {
-                position: relative;
                 box-shadow: none;
             }
 
-.whitebutton::before {
+            .whitebutton::before {
                 content: "";
               mix-blend-mode:multiply;
                 position: absolute;
