--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -126,10 +126,10 @@
         </h2>
 
 
-        <input class="colorpicker" id="color1" type="color" value="#8426ff" onmouseup="enablecolor();" onchange="SetCountDowngeneral();" />
-        <input class="colorpicker" id="color2" type="color" value="#3ab6ff" onmouseup="enablecolor();" onchange="SetCountDowngeneral();" />
-        <input class="colorpicker" id="color3" type="color" value="#00ff5e" onmouseup="enablecolor();" onchange="SetCountDowngeneral();" />
-        <input class="colorpicker" id="color4" type="color" value="#ff9900" onmouseup="enablecolor();" onchange="SetCountDowngeneral();" />
+        <input class="colorpicker" id="color1" type="color" value="#8426ff" onmouseup="enablecolor();" onblur="SetCountDowngeneral();" />
+        <input class="colorpicker" id="color2" type="color" value="#3ab6ff" onmouseup="enablecolor();" onblur="SetCountDowngeneral();" />
+        <input class="colorpicker" id="color3" type="color" value="#00ff5e" onmouseup="enablecolor();" onblur="SetCountDowngeneral();" />
+        <input class="colorpicker" id="color4" type="color" value="#ff9900" onmouseup="enablecolor();" onblur="SetCountDowngeneral();" />
         <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">Keep contrast in mind when choosing colors.</p>
         <br />
         <br />
