--- a/mcacountdown/Information/dependencies.html
+++ b/mcacountdown/Information/dependencies.html
@@ -16,16 +16,21 @@
     <center style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
 
         <h1>Open Source Dependencies and Adapted Code</h1>
-        <p>We could not have made this project possible without the many talented coders across the world who help others and contribute to open source libraries. Here are the open source projects we used to make countdown a great website!</p>
+        <p>This project was supported by talented coders who contribute to open source libraries. Here are projects I used to make countdown!</p>
         <br />
         <br />
-        <p>Confetti Falling Animation In Pure JavaScript – Confetti.js</p>
+        <p>Confetti Falling Animation In Pure JavaScript - Confetti.js</p>
         <a class="aintext" href="https://www.cssscript.com/confetti-falling-animation/">Visit Site</a>
         <br />
         <br />
         <br />
         <p>Pure CSS Apple Music animated background (adapted)</p>
         <a class="aintext" href="https://codepen.io/futuricon/pen/mdybZzN">Visit Site</a>
+        <br />
+        <br />
+        <br />
+        <p>Speed Tab Bar (adapted)</p>
+        <a class="aintext">Shared by a friend</a>
         <br />
         <br />
         <br />
