--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -74,9 +74,13 @@
         <a onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-gear"></i> Close</a>
         <a id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
 
-        <Br>
-        <br>
-        <br>
+        <hr style="border-color: #242424; margin-top: 150px; " />
+        <h1><i style="color: #39B8FB" class="fa-solid fa-paper-plane"></i> Shareable Options</h1>
+        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">Options that are saved in the link for this countdown, not with your preferences.</p>
+        <hr style="border-color: #242424; margin-top: 30px" />
+        <br />
+        <br />
+        <br />
         <h2 class="textelement">
             Date
         </h2>
@@ -157,10 +161,15 @@
         <a class="aintext fontpicker" id="poppins" style="font-family:'Poppins'" onmouseup="FontPoppins('Manual');">12:34</a>
         <a class="aintext fontpicker" id="yeseva" style="font-family:'Yeseva One'" onmouseup="FontYeseva('Manual');">12:34</a>
         <a class="aintext fontpicker" id="orbitron" style="font-family:'Orbitron'" onmouseup="FontOrbitron('Manual');">12:34</a>
+
+        <hr style="border-color: #242424; margin-top: 250px" />
+        <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
+        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">Options that save across all your countdowns and won't be shared in the link.</p>
+        <hr style="border-color: #242424; margin-top: 30px" />
         <br />
         <br />
-        <br>
-        <br>
+        <br />
+        <br />
         <h2 class="textelement">
             Animation Speed
         </h2>
@@ -314,6 +323,7 @@
         outline: 1px solid #8426ff;
         background: #141414;
         border: none;
+        cursor:pointer;
     }
 
     .backgroundpicker {
@@ -381,6 +391,7 @@
         background: #141414;
         border: none;
         opacity: 0.5;
+        cursor:not-allowed;
     }
 
         .disabledcolorpicker::-webkit-color-swatch {
