--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -74,10 +74,10 @@
         <a onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-gear"></i> Close</a>
         <a id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
 
-        <hr style="border-color: #242424; margin-top: 150px; " />
-        <h1><i style="color: #39B8FB" class="fa-solid fa-paper-plane"></i> Shareable Options</h1>
-        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">Options that are saved in the link for this countdown, not with your preferences.</p>
-        <hr style="border-color: #242424; margin-top: 30px" />
+        <div style="width:100vw; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(57,184,251,0.2))">
+            <h1><i style="color: #39B8FB" class="fa-solid fa-paper-plane"></i> Shareable Options</h1>
+            <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are saved in the link for this countdown, not with your preferences.</p>
+        </div>
         <br />
         <br />
         <br />
@@ -162,10 +162,10 @@
         <a class="aintext fontpicker" id="yeseva" style="font-family:'Yeseva One'" onmouseup="FontYeseva('Manual');">12:34</a>
         <a class="aintext fontpicker" id="orbitron" style="font-family:'Orbitron'" onmouseup="FontOrbitron('Manual');">12:34</a>
 
-        <hr style="border-color: #242424; margin-top: 250px" />
-        <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
-        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">Options that save across all your countdowns and won't be shared in the link.</p>
-        <hr style="border-color: #242424; margin-top: 30px" />
+        <div style="width:100vw; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(254,154,0,0.2))">
+            <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
+            <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that save across all your countdowns and won't be shared in the link.</p>
+        </div>
         <br />
         <br />
         <br />
