--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -151,6 +151,16 @@
         <a class="aintext backgroundpicker" id="fourthbg" onmouseup="fourthbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_fourth.png"></div></a>
         <a class="aintext backgroundpicker" id="fallbg" onmouseup="fallbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_thanksgiving.png"></div></a>
         <br />
+        <a class="aintext backgroundpicker" id="primaries" onmouseup="primariesbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_PrimaryColors.png"></div></a>
+        <a class="aintext backgroundpicker" id="pinklemonade" onmouseup="pinklemonadebg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_pinklemonade.png"></div></a>
+        <a class="aintext backgroundpicker" id="coolbg" onmouseup="coolbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_cool.png"></div></a>
+        <a class="aintext backgroundpicker" id="orangeteal" onmouseup="primariesbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_orange.png"></div></a>
+        <br />
+        <a class="aintext backgroundpicker" id="primaries" onmouseup="primariesbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_red.png"></div></a>
+        <a class="aintext backgroundpicker" id="pinklemonade" onmouseup="pinklemonadebg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_green.png"></div></a>
+        <a class="aintext backgroundpicker" id="coolbg" onmouseup="coolbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_blue.png"></div></a>
+        <a class="aintext backgroundpicker" id="redbg" onmouseup="redbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground_purple.png"></div></a>
+        <br />
         <br />
         <br>
         <br>
