--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -143,7 +143,7 @@
         <br>
         <br>
         <h2 class="textelement">
-            Backgrounds
+            Background
         </h2>
 
         <a class="aintext backgroundpicker" id="defaultbg" onmouseup="defaultbg()"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="enhancedbackground.png"></div></a>
